ingress/ap-fe-web-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-fe-dev
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ap-fe-dev-ingress
  namespace: testing
spec:
  ingressClassName: nginx
  rules:
  - host: dev.domain.com
    http:
      paths:
      - backend:
          service:
            name: ap-fe-web-dev-svc
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dev.domain.com
    secretName: letsencrypt-fe-staging
status:
  loadBalancer:
    ingress:
    - ip: 34.142.187.48
